--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rollup-datav-libs",
   "version": "1.0.1",
   "description": "datav commponents library",
-  "main": "dist/datav.libs.js", 
+  "main": "dist/datav.libs.js",
   "scripts": {
     "dev": "rollup -wc rollup.config.dev.js",
     "build": "rollup -c rollup.config.dev.js",
@@ -28,7 +28,8 @@
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0-beta.10",
-    "sass": "^1.30.0"
+    "sass": "^1.30.0",
+    "uuid": "^9.0.0"
   },
   "dependencies": {
     "rollup-datav-libs": "file:"
